add swagger and column name and description on oauth2_session
