# schemas/auth.go
@@ -10,7 +10,14 @@ type LoginResponse struct {
 	TokenType   string `json:"token_type"`
 }
 
+type ClientRegiterRequest struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
+
 type ClientRegiterResponse struct {
+	Name         string `json:"name"`
+	Description  string `json:"description"`
 	ClientId     string `json:"client_id"`
 	ClientSecret string `json:"client_secret"`
 }
